# advent-of-code-2023

./: Cargo.toml
input/day00/: input.txt
input/day01/: input.txt
input/day05/: input.txt
input/day12/: test3.txt
src/: main.rs  solution.rs
src/days/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day24.rs  mod.rs  template.rs
